* code cleanup and formatting

--- a/math/notes/env-notes.tex
+++ b/math/notes/env-notes.tex
@@ -87,6 +87,12 @@
 	alternative=margin,
 	style=\tfa]
 
+% Title for exercise sets.
+\definehead [exercises] [chapter] [
+	before=\hairline\blank,
+	after=\nowhitespace\hairline]
+
+
 
 % % set inter-paragraph spacing
 % \setupwhitespace[medium]
