--- a/math/notes/prd-foundations/cmp-notes-set-theory.tex
+++ b/math/notes/prd-foundations/cmp-notes-set-theory.tex
@@ -1,4 +1,4 @@
-\startchapter [title={Exercises for 2019-09-10}]
+\startexercises [title={\getvariable{document}{author}  \hfill  \getvariable{document}{course}  \hfill  2019-09-10}]
 	
 	\startproposition [title={Exercise 1.8}]
 		For any sets \m{A} and \m{B}, we have \m{A ∩ B ⊆ A}.
@@ -15,7 +15,7 @@
 		Let \m{x ∈ A ∩ ∅} be arbitrary. This means \m{x ∈ A} and \m{x ∈ ∅}. But there does not exist \m{x ∈ ∅}. Therefore, the statement is vacuously true.
 
 		\bold{(\m{⊇})}
-		Now, let \m{x ∈ ∅} be arbitrary. Again, there does not exist \m{x ∈ ∅}, rendering the statement vacuously true.
+		Now, let \m{x ∈ ∅} be arbitrary. Again, since there does not exist \m{x ∈ ∅}, the statement vacuously true.
 	\stopproof
 
 	\startproposition [title={Exercise 1.13}]
@@ -26,8 +26,7 @@
 		Let \m{x ∈ A ∪ B} be arbitrary. This means \m{x ∈ A} or \m{x ∈ B}. If \m{x ∈ A}, then by the condition \m{A ⊆ B}, we obtain \m{x ∈ B}. Therefore, in either case, \m{x ∈ B}.
 
 		\bold{(\m{⊇})}
-		Let \m{x ∈ B} be arbitrary. Then \m{x ∈ A} or \m{x ∈ B}, and so \m{x ∈ A ∪ B}.
+		Let \m{x ∈ B} be arbitrary. Therefore, \m{x ∈ A} or \m{x ∈ B}. Hence \m{x ∈ A ∪ B}.
 	\stopproof
 
-
-\stopchapter
+\stopexercises
