--- a/math/notes/prd-foundations/prd-foundations.tex
+++ b/math/notes/prd-foundations/prd-foundations.tex
@@ -3,9 +3,8 @@
 % Language
 \setvariables [document] [language=en]
 
-% Version and mode
-\setvariables [document] [version=temporary]    % {final, concept, temporary}
-\setvariables [document] [mode=presentation]    % {presentation, manuscript, handout}
+% Version
+\setvariables [document] [version=final]    % {final, concept, temporary}
 
 % Colors
 \setvariables [document] [color-link-external=royalblue]
@@ -24,10 +23,11 @@
 
 % Document specific information
 \setvariables [document] [title={Foundations of Mathematics}]
-\setvariables [document] [subtitle={Exercises from PHIL 4010}]
+\setvariables [document] [subtitle={Notes and Exercises}]
+\setvariables [document] [course={PHIL 4010}]
 \setvariables [document] [author={Sudip Sinha}]
 \setvariables [document] [date={\date}]
-\setvariables [document] [keyword={mathematics, solutions, notes, category theory}]
+\setvariables [document] [keyword={logic, mathematics, set theory, category theory, exercises, solutions, notes}]
 
 
 
