--- a/math/notes/prd-analysis/prd-analysis.tex
+++ b/math/notes/prd-analysis/prd-analysis.tex
@@ -3,9 +3,8 @@
 % Language
 \setvariables [document] [language=en]
 
-% Version and mode
+% Version
 \setvariables [document] [version=temporary]    % {final, concept, temporary}
-\setvariables [document] [mode=presentation]    % {presentation, manuscript, handout}
 
 % Colors
 \setvariables [document] [color-link-external=royalblue]
