--- a/math/notes/prd-combinatorics/prd-combinatorics.tex
+++ b/math/notes/prd-combinatorics/prd-combinatorics.tex
@@ -1,8 +1,7 @@
 \setvariables [document] [language=en]
 
-% Version and mode
+% Version
 \setvariables [document] [version=temporary]    % {final, concept, temporary}
-\setvariables [document] [mode=presentation]    % {presentation, manuscript, handout}
 
 % Colors
 \setvariables [document] [color-link-external=royalblue]
